--- a/templates/newTabButton.html
+++ b/templates/newTabButton.html
@@ -1,9 +1,3 @@
-<span 
-  class="tab newtab"
->
-  <a 
-    class="big-label" 
-    command="session:new-file" 
-    title="Create a new file"
-  >+</a>
+<span class="tab newtab">
+    <a class="big-label" command="session:new-file" title="Create a new file">+</a>
 </span>
