fixed about, added proper title

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
         <ul>
             <li>Written by
                 <a href="http://thomaswilburn.net" target=_blank>Thomas Wilburn</a>
-                <li>Modified by Morgan Yarbrough (test is a test version)</li>
+                <li> Modified by <a href="https://github.com/sevin7676" target="_blank">Morgan Yarbrough</a></li>
                 <li>
                     <a href="http://thomaswilburn.net/caret" target=_blank>[ Home Page ]</a>&mdash;
                     <a href="https://chrome.google.com/webstore/support/fljalecfjciodhpcledpamjachpmelml#bug" target=_blank>[ Support ]</a>
